@@ -34,11 +34,12 @@ import componenttest.annotation.Server;
 import componenttest.custom.junit.runner.FATRunner;
 import componenttest.custom.junit.runner.Mode;
 import componenttest.custom.junit.runner.Mode.TestMode;
+import componenttest.topology.impl.JavaInfo;
 import componenttest.topology.impl.LibertyServer;
 
 /**
  *
- * This test class contains test cases that test the Hung Request Timing server configuration attribute enableThreadDumps, when enabl
+ * This test class contains test cases that test the Hung Request Timing server configuration attribute enableThreadDumps.
  *
  */
 @RunWith(FATRunner.class)
@@ -52,8 +53,14 @@ public class HungRequestEnableThreadDumps {
 
     @BeforeClass
     public static void setUp() throws Exception {
+        JavaInfo java = JavaInfo.forCurrentVM();
         ShrinkHelper.defaultDropinApp(server, "TestWebApp", "com.ibm.testwebapp");
-        CommonTasks.writeLogMsg(Level.INFO, " Starting server..");
+        int javaVersion = java.majorVersion();
+        if (javaVersion != 8) {
+            CommonTasks.writeLogMsg(Level.INFO, " Java version = " + javaVersion + " - It is higher than 8, adding --add-exports...");
+            server.copyFileToLibertyServerRoot("add-exports/jvm.options");
+        }
+        CommonTasks.writeLogMsg(Level.INFO, " Starting server...");
         server.startServer();
     }
 
